--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>스마트 신체부담 작업분석 (Final)</title>
+    <title>신체부담 수준 평가 (AI)</title>
     <style>
         :root {
             --primary: #2980b9;
@@ -260,7 +260,7 @@
 
 <body>
 
-    <h1>🧠 스마트 작업분석 (AI)</h1>
+    <h1>신체부담 수준 평가 (AI)</h1>
     <div class="subtitle">자가 기입식 인간공학적 부하 평가</div>
 
     <div class="card">
@@ -567,3 +567,4 @@
     </script>
 </body>
 </html>
+
